# virtualshell

./: .gitignore  CMakeLists.txt  README.md  ZEROCOPY_BRIDGE.md  demo.py  pyproject.toml  test.py  test_performance_bridge.py
.github/workflows/: publish-wiki.yml  test_build-only.yml  workflow.yml
bench/: measure_bridge_fetch.py  profile_export.ps1  run_profile_export.py
cpp/include/: cmd_state.hpp  config.hpp  dev_debug.hpp  execution_result.hpp  helpers.h  helpers.hpp  io_pump.hpp  powershell_process.hpp  py_bridge.hpp  py_proxy.hpp  timeout_watcher.hpp  virtual_shell.hpp  virtual_shell_debug.hpp
cpp/include/mem/: shared_memory.hpp
cpp/lib/vs_shm/: CMakeLists.txt
cpp/src/: binder.cpp  io_pump.cpp  powershell_process.cpp  py_proxy.cpp  virtual_shell.cpp
docs/wiki/: Home.md  _Sidebar.md
src/virtualshell/: __init__.py  fast_bridge.ps1  fast_bridge.py  generate_psobject.py  shared_memory.ps1  shared_memory_bridge.ps1  shared_memory_bridge.py  shell.py  zero_copy_bridge.ps1  zero_copy_bridge_shell.py  zero_copy_pointer.py
wiki/Usage/: Zero-Copy Bridge.md  generate_psobject.md  make_proxy.md
win_pwsh_dll/: CMakeLists.txt
win_pwsh_dll/include/: vs_shm.h
win_pwsh_dll/src/: main.cpp
